# DogeNet.BLL/Features/Account/UpdateAccount/UpdateAccountDetailsModel.cs
@@ -1,12 +1,10 @@
-﻿// <copyright file="AccountDetailsModel.cs" company="Leobit">
+﻿// <copyright file="UpdateAccountDetailsModel.cs" company="Leobit">
 // Copyright (c) Leobit. All rights reserved.
 // </copyright>
 
-namespace DogeNet.BLL.Features.Account.GetAccount
+namespace DogeNet.BLL.Features.Account.UpdateAccount
 {
-    using System;
-
-    public class AccountDetailsModel
+    public class UpdateAccountDetailsModel
     {
         public int Id { get; set; }
 
@@ -18,19 +16,9 @@ namespace DogeNet.BLL.Features.Account.GetAccount
 
         public string LastName { get; set; }
 
-        public DateTime? CreatedAt { get; set; }
-
-        public DateTime? UpdatedAt { get; set; }
-
-        public int? StatusId { get; set; }
-
         public string Title { get; set; }
 
         public string AvatarImg { get; set; }
-
-        public string CoverImg { get; set; }
-
-        public int? CityId { get; set; }
 
         public string Bio { get; set; }
     }
