# DogeNetWebClient/src/app/core/api/models.ts
@@ -3,3 +3,4 @@ export { CreateConversationModel } from './models/create-conversation-model';
 export { MessagesDetailsModel } from './models/messages-details-model';
 export { SendMessageModel } from './models/send-message-model';
 export { EditMessageModel } from './models/edit-message-model';
+export { AccountDetailsModel } from './models/account-details-model';
